# backend-coding-interview

./: .env.example  .gitignore  README.md  entrypoint.py  pyproject.toml
src/clever/: __init__.py  config.py  database.py  logging.py  main.py  models.py  schemas.py  seed.py
src/clever/api/: __init__.py  health.py  photos.py  router.py
src/clever/auth/: __init__.py  deps.py
tests/: __init__.py  conftest.py  test_photos.py
